--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
+<section>
 <h1> Welcome to Mubarak Adeshina's Page </h1>
 
-<img src="MBX.jpg"  width="200" height="200">
+<img src="assets/images/MBX.jpg"  width="200" height="200"/>
 
 <ul>
   <li><a href="#"> Lab 1 - About me Lab </a></li>
@@ -20,6 +21,9 @@
 
 <a href="http://validator.w3.org/check/referer">
   <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-  alt="html validator"
+  alt="html validator"/>
+</a>
+</section>
+  
 </body>
 </html>
