--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <img src="assets/images/MBX.jpg"  width="200" height="200"/>
 
 <ul>
-  <li><a href="#"> Lab 1 - About me Lab </a></li>
-  <li><a href="#">Lab 3 - Servlet Introduction Lab </a></li>
-  <li><a href="#">Lab 4 - Simple calculator Lab </a></li>
-  <li><a href="#">Lab 5 - Quiz Servlet Lab </a></li>
-  <li><a href="#">Lab 6 - JSP Version Quiz Servlet Lab </a></li>
-  <li><a href="#"> Lab 7 - JSP Custom Tags Lab </a></li>
+  <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
+  <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
+  <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
+  <li><a href="#">Lab 4 - Quiz Servlet Lab </a></li>
+  <li><a href="#">Lab 5 - JSP Version Quiz Servlet Lab </a></li>
+  <li><a href="#"> Lab 6 - JSP Custom Tags Lab </a></li>
 </ul>
 
-<a href="http://validator.w3.org/check/referer">
+<a href="https://validator.w3.org/check/referer">
   <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
   alt="html validator"/>
 </a>
 </section>
-  
+
 </body>
 </html>
