--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <section>
 <h1> Welcome to Mubarak Adeshina's Page </h1>
 
-<img src="assets/images/MBX.jpg"  width="200" height="200"/>
+<img src="assets/images/MBX.jpg" alt ="profile pic"  width="200" height="200"/>
 
 <ul>
   <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
@@ -20,7 +20,7 @@
 </ul>
 
 <a href="https://validator.w3.org/check/referer">
-  <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+  <img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png"
   alt="html validator"/>
 </a>
 </section>
