--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </ul>
 
 <a href="https://validator.w3.org/check/referer">
-  <img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+  <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
   alt="html validator"/>
 </a>
 </section>
