--- a/lab1.html
+++ b/lab1.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-<title> lab1 </title>
+    <title> lab1 </title>
+    <link rel="stylesheet" type="text/css" href="styleeme.css">
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
-  <section>
-    <h1> Welcome to Lab1 </h1>
     <section>
-    </body>
-    </html>
+        <h1> Welcome to Lab1 </h1>
+        <hr>
+        <h1 class="name"> About Mubarak Adeshina</h1>
+        <p> My name is Mubarak. I am a Nigerian currently undergoing a Master's degree in MUM. I enjoy playing soccer, traveling, networking and learning new things.
+
+        </p>
+        <p>I am <span class="happy"><strong>happy</strong></span>,<span class="calm"><strong> calm </strong></span> and <span class="two_eye"><strong> two-eyed</strong></span>.</p>
+        <h3>
+            My Classes This Quarter
+        </h3>
+
+        <div class="list1">
+            <ul>
+                <li>CS 390 - Fundamental Programming practice</li>
+                <li> CS 470 - Modern Programming Practice</li>
+                <li>CS 472 - Database Management Systems</li>
+                <li>CS 474 - Web Application Programming</li>
+            </ul>
+        </div>
+        <h3>
+            My favourite Movies
+        </h3>
+        <p>(I mostly watch action movies and tv shows)</p>
+        <div class="list">
+            <ol>
+                <li> Flight <a class="hover" href="https://www.imdb.com/title/tt1907668/?ref_=fn_al_tt_1">(IMDB)</a></li>
+                <li>Hotel Mumbia <a href="https://www.imdb.com/title/tt5461944/"> (IMDB)</a></li>
+                <li>La Casa De Papel <a href="https://www.imdb.com/title/tt6468322/"> (IMDB)</a></li>
+            </ol>
+        </div>
+        <h3>My Moods</h3>
+
+        <p>Party <img src="assets/images/party.jpg" width="200px" height="200px" alt="partying"> Happy <img src="assets/images/happy.jpg" width="200px" height="200px" alt="Happy"></p>
+
+        <h3>Fun Facts About My Neighbors</h3>
+
+        <ul>
+            <li>Bernard Nwogbo: Calm, collected and intelligent.</li>
+            <li>Abdul Mustapha: laid back and calm. </li>
+        </ul>
+
+        <a href="https://validator.w3.org/check/referer">
+            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
+        </a>
+
+
+
+        <section>
+</body>
+
+</html>
