--- a/lab1.html
+++ b/lab1.html
@@ -45,7 +45,7 @@
         </div>
         <h3>My Moods</h3>
 
-        <p>Party <img src="assets/images/party.jpg" width="200px" height="200px" alt="partying"> Happy <img src="assets/images/happy.jpg" width="200px" height="200px" alt="Happy"></p>
+        <p>Party <img src="assets/images/party.jpg" width="200" height="200" alt="partying"> Happy <img src="assets/images/happy.jpg" width="200" height="200" alt="Happy"></p>
 
         <h3>Fun Facts About My Neighbors</h3>
 
@@ -60,7 +60,7 @@
 
 
 
-        <section>
+    </section>
 </body>
 
 </html>
