--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <ul>
   <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
+  <li><a href="homework/pie.html"> Homework 1 </a></li>
   <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
   <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
   <li><a href="#">Lab 4 - Quiz Servlet Lab </a></li>
