--- a/lab1.html
+++ b/lab1.html
@@ -16,7 +16,7 @@
         <h1> Welcome to Lab1 </h1>
         <hr>
         <h1 class="name"> About Mubarak Adeshina</h1>
-        <p> My name is Mubarak. I am a Nigerian currently undergoing a Master's degree in MUM. I enjoy playing soccer, traveling, networking and learning new things.
+        <p> <span class="firstletter">M</span> y name is Mubarak. I am a Nigerian currently undergoing a Master's degree in MUM. I enjoy playing soccer, traveling, networking and learning new things.
 
         </p>
         <p>I am <span class="happy"><strong>happy</strong></span>,<span class="calm"><strong> calm </strong></span> and <span class="two_eye"><strong> two-eyed</strong></span>.</p>
@@ -38,7 +38,13 @@
         <p>(I mostly watch action movies and tv shows)</p>
         <div class="list">
             <ol>
-                <li> Flight <a class="hover" href="https://www.imdb.com/title/tt1907668/?ref_=fn_al_tt_1">(IMDB)</a></li>
+                <li> Flight <a class="hover" href="https://www.imdb.com/title/tt1907668/?ref_=fn_al_tt_1">(IMDB)</a>
+                    <ul>
+                        <li>Genre: Action </li>
+                        <li>Director: Major Banks</li>
+                        <li>Story Line : Denzel Washington crahsed a plane and has to justify his actions. </li>
+                    </ul>
+                </li>
                 <li>Hotel Mumbia <a href="https://www.imdb.com/title/tt5461944/"> (IMDB)</a></li>
                 <li>La Casa De Papel <a href="https://www.imdb.com/title/tt6468322/"> (IMDB)</a></li>
             </ol>
@@ -56,6 +62,9 @@
 
         <a href="https://validator.w3.org/check/referer">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
+        </a>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img src="homework/images/w3c-css.png" alt="css validator" />
         </a>
 
 
