--- a/pie.html
+++ b/pie.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="first">Grandma's Lemon Meringue Pie</h1>
-    <img src="images/pie.jpg" width="200" height="200" alt="pie image">
+    <img src="assets/images/pie.jpg" width="200" height="200" alt="pie image">
     <div>
         <p> One 9-inch pie <br> 30 Min - Prep time <br> 10 Min - Cook time <br> 40 Min - Total <br> 8 Servings </p>
     </div>
@@ -81,7 +81,7 @@
                 <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
             </a>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img src="images/w3c-css.png" alt="css validator" />
+                <img src="assets/images/w3c-css.png" alt="css validator" />
             </a>
         </p>
 
