--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-<title> index </title>
+    <title> index </title>
 </head>
+
 <body>
 
-<section>
-<h1> Welcome to Mubarak Adeshina's Page </h1>
+    <section>
+        <h1> Welcome to Mubarak Adeshina's Page </h1>
 
-<img src="assets/images/MBX.jpg" alt ="profile pic"  width="200" height="200"/>
+        <img src="assets/images/MBX.jpg" alt="profile pic" width="200" height="200" />
 
-<ul>
-  <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
-  <li><a href="http://mubarak-code.github.io/pie.html"> Homework 1 </a></li>
-  <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
-  <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
-  <li><a href="#">Lab 4 - Quiz Servlet Lab </a></li>
-  <li><a href="#">Lab 5 - JSP Version Quiz Servlet Lab </a></li>
-  <li><a href="#"> Lab 6 - JSP Custom Tags Lab </a></li>
-</ul>
+        <ul>
+            <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/pie"> Homework 1 </a></li>
+            <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
+            <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
+            <li><a href="#">Lab 4 - Quiz Servlet Lab </a></li>
+            <li><a href="#">Lab 5 - JSP Version Quiz Servlet Lab </a></li>
+            <li><a href="#"> Lab 6 - JSP Custom Tags Lab </a></li>
+        </ul>
 
-<a href="https://validator.w3.org/check/referer">
-  <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-  alt="html validator"/>
-</a>
-</section>
+        <a href="https://validator.w3.org/check/referer">
+            <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator" />
+        </a>
+    </section>
 
 </body>
+
 </html>
