--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
             <li><a href="http://mubarak-code.github.io/tmnt"> Homework 2 - Movie Review </a></li>
             <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
             <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
-            <li><a href="#">Lab 4 - Quiz Servlet Lab </a></li>
-            <li><a href="#">Lab 5 - JSP Version Quiz Servlet Lab </a></li>
-            <li><a href="#"> Lab 6 - JSP Custom Tags Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/QuizServlet">  Lab 4 - Quiz Servlet Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/QuizStateManagement"> Lab 5 - Quiz State Management Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/QuizJSP"> Lab 6 - Quiz JSP Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/QuizCustomTags"> Lab 7 - Quiz JSP Custom Tags </a></li>
+
+
         </ul>
 
         <a href="https://validator.w3.org/check/referer">
