--- a/QuizCustomTags.html
+++ b/QuizCustomTags.html
@@ -15,7 +15,7 @@
 
     <li><span> Rewrite the JSP page in the first demo (forEach) to use scripting instead of the JSTL forEach. </span>
         <div>
-            <img src="code.jpg" alt="code"/>
+            <img src="assets/images/code.jpg" alt="code"/>
         </div>
 
     </li>
