--- a/QuizStateManagement.html
+++ b/QuizStateManagement.html
@@ -19,7 +19,7 @@ and open the template in the editor.
     </style>
 </head>
 <body>
-<h2> Answers for Servlet Quiz</h2>
+<h2> Answers for Servlet State Management</h2>
 <ol>
     <li><p class="question">Can post requests be bookmarked? What are the problems?</p>
         <p class="answer">An HTTP POST can be bookmarked, but since a bookmark only consists of the URL, all of the form
