added http form

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <li><a href="http://mubarak-code.github.io/lab1"> Lab 1 - About me Lab </a></li>
             <li><a href="http://mubarak-code.github.io/pie"> Homework 1 - Recipe </a></li>
             <li><a href="http://mubarak-code.github.io/tmnt"> Homework 2 - Movie Review </a></li>
-            <li><a href="#">Lab 2 - Servlet Introduction Lab </a></li>
-            <li><a href="#">Lab 3 - Simple calculator Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/2/index"> Lab 3 - Http form </a></li>
             <li><a href="http://mubarak-code.github.io/QuizServlet">  Lab 4 - Quiz Servlet Lab </a></li>
             <li><a href="http://mubarak-code.github.io/QuizStateManagement"> Lab 5 - Quiz State Management Lab </a></li>
             <li><a href="http://mubarak-code.github.io/QuizJSP"> Lab 6 - Quiz JSP Lab </a></li>
