tip and click lab

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a href="http://mubarak-code.github.io/QuizStateManagement"> Lab 5 - Quiz State Management Lab </a></li>
             <li><a href="http://mubarak-code.github.io/QuizJSP"> Lab 6 - Quiz JSP Lab </a></li>
             <li><a href="http://mubarak-code.github.io/QuizCustomTags"> Lab 7 - Quiz JSP Custom Tags </a></li>
+            <li><a href="http://mubarak-code.github.io/click"> JS - On Click lab </a></li>
+            <li><a href="http://mubarak-code.github.io/tip"> JS - Tip Calculator </a></li>
 
 
         </ul>
