--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <li><a href="http://mubarak-code.github.io/QuizCustomTags"> Lab 7 - Quiz JSP Custom Tags </a></li>
             <li><a href="http://mubarak-code.github.io/click"> JS - On Click lab </a></li>
             <li><a href="http://mubarak-code.github.io/tip"> JS - Tip Calculator </a></li>
+            <li><a href="http://mubarak-code.github.io/decoratemytext"> JS - Decorate My Text Lab </a></li>
+            <li><a href="http://mubarak-code.github.io/buggy1"> JS - Fix bug Lab 1 </a></li>
+            <li><a href="http://mubarak-code.github.io/buggy2"> JS - Fix bug lab 2 </a></li>
+            <li><a href="http://mubarak-code.github.io/buggy3"> JS - Fix bug lab 3 </a></li>
+            <li><a href="http://mubarak-code.github.io/buggy4"> JS - Fix bug lab 4 </a></li>
 
 
         </ul>
