--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <li><a href="http://mubarak-code.github.io/buggy2"> JS - Fix bug lab 2 </a></li>
             <li><a href="http://mubarak-code.github.io/buggy3"> JS - Fix bug lab 3 </a></li>
             <li><a href="http://mubarak-code.github.io/buggy4"> JS - Fix bug lab 4 </a></li>
-
+            <li><a href="http://mubarak-code.github.io/ascii"> JS - ASCII amination viewer </a></li>
+            <li><a href="http://mubarak-code.github.io/maze"> JS - Maze Game </a></li>
+            <li><a href="http://mubarak-code.github.io/closurelab"> JS - Module and Closure lab</a></li>
+            <li><a href="http://mubarak-code.github.io/fifteen"> JS - Fifteen puzzle</a></li>
 
         </ul>
 
