--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="http://mubarak-code.github.io/click"> JS - On Click lab </a></li>
             <li><a href="http://mubarak-code.github.io/tip"> JS - Tip Calculator </a></li>
             <li><a href="http://mubarak-code.github.io/jsquiz"> JS Quiz </a></li>
+            <li><a href="http://mubarak-code.github.io/scope"> Scope Quiz </a></li>
             <li><a href="http://mubarak-code.github.io/decoratemytext"> JS - Decorate My Text Lab </a></li>
             <li><a href="http://mubarak-code.github.io/buggy1"> JS - Fix bug Lab 1 </a></li>
             <li><a href="http://mubarak-code.github.io/buggy2"> JS - Fix bug lab 2 </a></li>
